corrections to layout

--- a/read01_301.md
+++ b/read01_301.md
@@ -1,12 +1,12 @@
-* *Why This Topic Matters As it Relates to This Module*
-  * Well, the first homework assignment is about React components so the importance of understanding the readings is self-evident.
+#### *Why This Topic Matters As it Relates to This Module*
+Well, the first homework assignment is about React components so the importance of understanding the readings is self-evident.
 
-## Component-Based Architecture
+### Component-Based Architecture
   ### 1.	What is a “component”?
-#### “A component is a modular, portable, replaceable, and reusable set of well-defined functionality that encapsulates its implementation and exporting it as a higher-level interface.
-#### A component is a software object, intended to interact with other components, encapsulating certain functionality or a set of functionalities. It has an obviously defined interface and conforms to a recommended behavior common to all components within an architecture.
-#### A software component can be defined as a unit of composition with a contractually specified interface and explicit context dependencies only. That is, a software component can be deployed independently and is subject to composition by third parties.” – Directly quoted from: https://www.tutorialspoint.com/software_architecture_design/component_based_architecture.htm
-### 2.	What are the characteristics of a component?
+“A component is a modular, portable, replaceable, and reusable set of well-defined functionality that encapsulates its implementation and exporting it as a higher-level interface.
+A component is a software object, intended to interact with other components, encapsulating certain functionality or a set of functionalities. It has an obviously defined interface and conforms to a recommended behavior common to all components within an architecture.
+A software component can be defined as a unit of composition with a contractually specified interface and explicit context dependencies only. That is, a software component can be deployed independently and is subject to composition by third parties.” – Directly quoted from: https://www.tutorialspoint.com/software_architecture_design/component_based_architecture.htm
+#### 2.	What are the characteristics of a component?
 * “Reusability − Components are usually designed to be reused in different situations in different applications. However, some components may be designed for a specific task.
 * Replaceable − Components may be freely substituted with other similar components.
 * Not context specific − Components are designed to operate in different environments and contexts.
@@ -14,7 +14,7 @@
 * Encapsulated − A A component depicts the interfaces, which allow the caller to use its functionality, and do not expose details of the internal processes or any internal variables or state.
 * Independent − Components are designed to have minimal dependencies on other components. “ -Directly quoted from https://www.tutorialspoint.com/software_architecture_design/component_based_architecture.htm
 
-### 3.	What are the advantages of using component-based architecture?
+#### 3.	What are the advantages of using component-based architecture?
 * “Ease of deployment − As new compatible versions become available, it is easier to replace existing versions with no impact on the other components or the system as a whole.
 * Reduced cost − The use of third-party components allows you to spread the cost of development and maintenance.
 * Ease of development − Components implement well-known interfaces to provide defined functionality, allowing development without impacting other parts of the system.
@@ -24,13 +24,13 @@
 * System maintenance and evolution − Easy to change and update the implementation without affecting the rest of the system.
 * Independent − Independency and flexible connectivity of components. Independent development of components by different group in parallel. Productivity for the software development and future software development.” -Directly quoted from: https://www.tutorialspoint.com/software_architecture_design/component_based_architecture.htm
 
-## What is Props and How to Use it in React
-### 1.	What is “props” short for?
-#### “Props” is short for properties.
-### 2.	How are props used in React?
-#### In React, props are used to pass data between components.
-### 3.	What is the flow of props?
-#### Props data flows uni-directionally from a parent component to a child component.
+### What is Props and How to Use it in React
+#### 1.	What is “props” short for?
+* “Props” is short for properties.
+#### 2.	How are props used in React?
+* In React, props are used to pass data between components.
+#### 3.	What is the flow of props?
+* Props data flows uni-directionally from a parent component to a child component.
 
-* *Things I want to know more about*
-  * I'd like to know more about actually using React so I'll end here and git cracking on some assignments! 
+#### *Things I want to know more about*
+I'd like to know more about actually using React so I'll end here and git cracking on some assignments! 
