additional layout corrections

--- a/read01_301.md
+++ b/read01_301.md
@@ -2,10 +2,10 @@
 Well, the first homework assignment is about React components so the importance of understanding the readings is self-evident.
 
 ### Component-Based Architecture
-  ### 1.	What is a “component”?
+#### 1.	What is a “component”?
 “A component is a modular, portable, replaceable, and reusable set of well-defined functionality that encapsulates its implementation and exporting it as a higher-level interface.
 A component is a software object, intended to interact with other components, encapsulating certain functionality or a set of functionalities. It has an obviously defined interface and conforms to a recommended behavior common to all components within an architecture.
-A software component can be defined as a unit of composition with a contractually specified interface and explicit context dependencies only. That is, a software component can be deployed independently and is subject to composition by third parties.” – Directly quoted from: https://www.tutorialspoint.com/software_architecture_design/component_based_architecture.htm
+A software component can be defined as a unit of composition with a contractually specified interface and explicit context dependencies only. That is, a software component can be deployed independently and is subject to composition by third parties.” – Directly quoted from: [tutorialspoint.com](https://www.tutorialspoint.com/software_architecture_design/component_based_architecture.htm)
 #### 2.	What are the characteristics of a component?
 * “Reusability − Components are usually designed to be reused in different situations in different applications. However, some components may be designed for a specific task.
 * Replaceable − Components may be freely substituted with other similar components.
@@ -22,15 +22,15 @@ A software component can be defined as a unit of composition with a contractuall
 * Modification of technical complexity − A component modifies the complexity through the use of a component container and its services.
 * Reliability − The overall system reliability increases since the reliability of each individual component enhances the reliability of the whole system via reuse.
 * System maintenance and evolution − Easy to change and update the implementation without affecting the rest of the system.
-* Independent − Independency and flexible connectivity of components. Independent development of components by different group in parallel. Productivity for the software development and future software development.” -Directly quoted from: https://www.tutorialspoint.com/software_architecture_design/component_based_architecture.htm
+* Independent − Independency and flexible connectivity of components. Independent development of components by different group in parallel. Productivity for the software development and future software development.” -Directly quoted from: [tutorialspoint.com](https://www.tutorialspoint.com/software_architecture_design/component_based_architecture.htm)
 
 ### What is Props and How to Use it in React
 #### 1.	What is “props” short for?
-* “Props” is short for properties.
+“Props” is short for properties.
 #### 2.	How are props used in React?
-* In React, props are used to pass data between components.
+In React, props are used to pass data between components.
 #### 3.	What is the flow of props?
-* Props data flows uni-directionally from a parent component to a child component.
+Props data flows uni-directionally from a parent component to a child component.
 
 #### *Things I want to know more about*
 I'd like to know more about actually using React so I'll end here and git cracking on some assignments! 
