read 02 canvas submission

--- a/read02_301.md
+++ b/read02_301.md
@@ -1,9 +1,39 @@
-* *Why This Topic Matters As it Relates to This Module*
-  * Coming soon!
+#### *Why This Topic Matters As it Relates to This Module*
+I assume that will become apparent tomorrow (or the day after); at present I couldn't say.
 
-### Coming soon!
-* coming soon...!
+### React lifecycle
+#### 1.	Based off the diagram, what happens first, the ‘render’ or the ‘componentDidMount’?
+The render.
 
+#### 2.	What is the very first thing to happen in the lifecycle of React?
+Mounting.
 
-* *Things I want to know more about*
-  * Coming soon!
+#### 3.	Put the following things in the order that they happen: componentDidMount, render, constructor, componentWillUnmount, React Updates
+1. constructor
+2. render
+3. React Updates
+4. componentDidMount  
+5. componentWillUnmount
+
+#### 4. What does componentDidMount do?
+"This method is invoked immediately after a component is mounted. If you need to load anything using a network request or initialize the DOM, it should go here. This method is a good place to set up any subscriptions. If you do that, don’t forget to unsubscribe in componentWillUnmount().
+
+setState() can be called here, but it should be used sparingly, because it will cause a rerender, which can lead to perfomance issues.
+
+Here we use componentDidMount() to connect to the YouTube API and get videos when the components is rendered." Directly quoted from: [medium.com](https://medium.com/@joshuablankenshipnola/react-component-lifecycle-events-cb77e670a093)
+
+### React State Vs Props
+#### 1.	What types of things can you pass in the props?
+Initial properties and things you want rendered.
+
+#### 2.	What is the big difference between props and state?
+"State is handled in the component and you can update it inside the component. While props are handled outside the component and must be updated outside of the component." Directly quoted from [React State Vs Props](https://www.youtube.com/watch?v=IYvD9oBCuJI)
+
+#### 3.	When do we re-render our application?
+"When you change the state inside of your application, it's going to re-render that section of your application."
+
+#### 4. What are some examples of things that we could store in state?
+Things that are updated based on user activity that require the application to be re-rendered.
+
+#### *Things I want to know more about*
+I'm flying through these assignments without properly digesting them. I don't even know what questions to ask.
