--- a/read03_301.md
+++ b/read03_301.md
@@ -27,13 +27,13 @@ Among other things, the spread operator can be used for:
 -per [medium.com](https://medium.com/coding-at-dawn/how-to-use-the-spread-operator-in-javascript-b9e4a8b06fab)
 
 #### 3. Give an example of using the spread operator to combine two arrays.
-![Spread -Combining Arrays](img/spread_combineArrs.jpg)
+![Spread -Combining Arrays](img/spread_combineArrs.JPG)
 
 #### 4. Give an example of using the spread operator to add a new item to an array.
-![Spread -Add to Array](img/spread_arrAdd.jpg)
+![Spread -Add to Array](img/spread_arrAdd.JPG)
 
 #### 5. Give an example of using the spread operator to combine two objects into one.
-![Spread -Combining Objects](img/spread_combine.jpg)
+![Spread -Combining Objects](img/spread_combine.JPG)
 
 
 ### [How to Pass Functions Between Components](https://www.youtube.com/watch?v=c05OL7XbwXU)
