Read 7 ready for canvas submission

--- a/read07_301.md
+++ b/read07_301.md
@@ -1,28 +1,37 @@
 #### *Why This Topic Matters As it Relates to This Module*
-lorem ipsum
+Soon to be discovered.
 
-### [Topic](weblink)
-#### 
-lorem ipsum
-[WhoSaidIt](weblink)
-![ImageName](weblink)
+### [What Google Learned From Its Quest to Build the Perfect Team](https://www.google.com/amp/mobile.nytimes.com/2016/02/28/magazine/what-google-learned-from-its-quest-to-build-the-perfect-team.amp.html)
+Meditating on how this article can influence the way I work with my partners during pair programming.
+![zenpup](https://unsplash.com/photos/K4mSJ7kc0As)
 
-#### 
-lorem ipsum
-[WhoSaidIt](weblink)
-![ImageName](weblink)
+### [How I explained REST to my brother](https://gist.github.com/brookr/5977550)
+#### 1. Who is Roy Fielding?
+Some guy who helped write the first web servers.
 
+#### 2. Why don’t the techniques that we use today work well when we need to be able to talk to all of the machines in the world?
+"Because they weren't designed to be used like that."
 
-### [Topic](weblink)
-#### 
-lorem ipsum
-[WhoSaidIt](weblink)
-![ImageName](weblink)
+#### 3. What is the HTTP protocol that Fielding and his friends created?
+The basis for the world wide web allowing computers to reference anything from anywhere.
 
-#### 
-lorem ipsum
-[WhoSaidIt](weblink)
-![ImageName](weblink)
+#### 4. What does a GET do?
+Lets a computer get web pages related to what you asked for; downward reference; getting something off the net.
+
+#### 5. What does a POST do?
+Let's a computer send stuff upstream; upward reference; adding something to the net.
+
+#### 6. What does PUT do?
+A partial update.
+
+#### 7. What does PATCH do?
+Updates code.
+
+### API Keys
+* [Geocoding API](https://locationiq.com/) - ![Got it!](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT9xq-TcJGisIHwwcboigmNKkKtcF04iUf0Jg&usqp=CAU)
+* [Weather Bit API](https://www.weatherbit.io/) - ![Got it!](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT9xq-TcJGisIHwwcboigmNKkKtcF04iUf0Jg&usqp=CAU)
+* [Yelp API Docs](https://www.yelp.com/developers/documentation/v3/business_search) - Not yet!
+* [The Movie DB API Docs](https://developers.themoviedb.org/3/getting-started/introduction) - Not yet!
 
 #### *Things I want to know more about*
-lorem ipsum
+Publishing a web page.
