--- a/read07_301.md
+++ b/read07_301.md
@@ -3,7 +3,7 @@ Soon to be discovered.
 
 ### [What Google Learned From Its Quest to Build the Perfect Team](https://www.google.com/amp/mobile.nytimes.com/2016/02/28/magazine/what-google-learned-from-its-quest-to-build-the-perfect-team.amp.html)
 Meditating on how this article can influence the way I work with my partners during pair programming.
-![zenpup](https://unsplash.com/photos/K4mSJ7kc0As)
+![zenpup](zenpup.jpg)
 
 ### [How I explained REST to my brother](https://gist.github.com/brookr/5977550)
 #### 1. Who is Roy Fielding?
