update to show all API keys received

--- a/read07_301.md
+++ b/read07_301.md
@@ -30,8 +30,8 @@ Updates code.
 ### API Keys
 * [Geocoding API](https://locationiq.com/) - ![Got it!](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT9xq-TcJGisIHwwcboigmNKkKtcF04iUf0Jg&usqp=CAU)
 * [Weather Bit API](https://www.weatherbit.io/) - ![Got it!](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT9xq-TcJGisIHwwcboigmNKkKtcF04iUf0Jg&usqp=CAU)
-* [Yelp API Docs](https://www.yelp.com/developers/documentation/v3/business_search) - ![Got it!](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT9xq-TcJGisIHwwcboigmNKkKtcF04iUf0Jg&usqp=CAU =25x25)
-* [The Movie DB API Docs](https://developers.themoviedb.org/3/getting-started/introduction) - Not yet!
+* [Yelp API Docs](https://www.yelp.com/developers/documentation/v3/business_search) - ![Got it!](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT9xq-TcJGisIHwwcboigmNKkKtcF04iUf0Jg&usqp=CAU)
+* [The Movie DB API Docs](https://developers.themoviedb.org/3/getting-started/introduction) - ![Got it!](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT9xq-TcJGisIHwwcboigmNKkKtcF04iUf0Jg&usqp=CAU)
 
 #### *Things I want to know more about*
 Publishing a web page.
