read 8 ready for canvas submission

--- a/read08_301.md
+++ b/read08_301.md
@@ -1,28 +1,42 @@
 #### *Why This Topic Matters As it Relates to This Module*
-lorem ipsum
+We are integrating data from online sources using APIs in this week's lab assignments.
 
-### [Topic](weblink)
-#### 
-lorem ipsum
-[WhoSaidIt](weblink)
-![ImageName](weblink)
+### [API Design Best Practices](https://docs.microsoft.com/en-us/azure/architecture/best-practices/api-design)
+#### 1. What does REST stand for?
+Representational State Transfer
 
-#### 
-lorem ipsum
-[WhoSaidIt](weblink)
-![ImageName](weblink)
+#### 2. REST APIs are designed around a ____.
+resource
 
+#### 3. What is an identifier of a resource? Give an example.
+"A resource has an identifier, which is a URI that uniquely identifies that resource. For example, the URI for a particular customer order might be: https://adventure-works.com/orders/1 " _directly quoted from the article_
 
-### [Topic](weblink)
-#### 
-lorem ipsum
-[WhoSaidIt](weblink)
-![ImageName](weblink)
+#### 4. What are the most common HTTP verbs?
+GET, POST, PUT, PATCH, & DELETE
 
-#### 
-lorem ipsum
-[WhoSaidIt](weblink)
-![ImageName](weblink)
+#### 5. What should the URIs be based on?
+"When possible, resource URIs should be based on nouns (the resource) and not verbs (the operations on the resource)."  _directly quoted from the article_
+
+#### 6. Give an example of a good URI.
+https://adventure-works.com/orders // Good
+
+#### 7. What does it mean to have a ‘chatty’ web API? Is this a good or a bad thing?
+An API that exposes a large number of small resources is considered "chatty" and is unfortunate as it may "require a client application to send multiple requests to find all of the data that it requires" resulting in increased load on the server. _quoted from the article_
+
+#### 8. What status code does a successful GET request return?
+code 200 (OK)
+
+#### 9. What status code does an unsuccessful GET request return?
+code 204 (No Content)
+
+#### 10. What status code does a successful POST request return?
+code 201 (Created)
+
+#### 11. What status code does a successful DELETE request return?
+code 204 (No Content)
 
 #### *Things I want to know more about*
-lorem ipsum
+Flagging these for later reading:
+* [RegExr](https://regexr.com/)
+* [Regex Tutorial](https://medium.com/factory-mind/regex-tutorial-a-simple-cheatsheet-by-examples-649dc1c3f285)
+* [Regex 101](https://regex101.com/)
