--- a/read09_301.md
+++ b/read09_301.md
@@ -1,28 +1,40 @@
 #### *Why This Topic Matters As it Relates to This Module*
-lorem ipsum
+Without a functional understanding of functional programming < knyuck knyuck > we'd make poor coders indeed!
 
-### [Topic](weblink)
+### [Functional Programming Concepts](https://medium.com/the-renaissance-developer/concepts-of-functional-programming-in-javascript-6bc84220d2aa)
+
+#### 1. What is functional programming?
+Functional programming is a programming paradigm — a style of building the structure and elements of computer programs — that treats computation as the evaluation of mathematical functions and avoids changing-state and mutable data — Wikipedia
+
+#### 2. What is a pure function and how do we know if something is a pure function?
+A function is pure if it returns the same result if given the same argument and does cause side effects.
+
+#### 3. What are the benefits of a pure function?
+"Pure functions are stable, consistent, and predictable." _direct quote from the article_
+
+#### 4. What is immutability?
+The extent to which it can't be changed (with reference to state here).
+
+#### 5. What is Referential transparency?
+"Basically, if a function consistently yields the same result for the same input, it is referentially transparent." _direct quote from the article"
+
+
+### [Node JS Tutorial for Beginners #6 - Modules and require()](https://www.youtube.com/watch?v=xHLd36QoS4k)
 #### 
-lorem ipsum
-[WhoSaidIt](weblink)
-![ImageName](weblink)
-
-#### 
-lorem ipsum
-[WhoSaidIt](weblink)
-![ImageName](weblink)
 
 
-### [Topic](weblink)
-#### 
-lorem ipsum
-[WhoSaidIt](weblink)
-![ImageName](weblink)
+#### 1. What is a module?
+An individual file containing a chunk of code logic that is a component of a larger application. 
 
-#### 
-lorem ipsum
-[WhoSaidIt](weblink)
-![ImageName](weblink)
+#### 2. What does the word ‘require’ do?
+It connects modules so that the application can use it as required.
+
+#### 3. How do we bring another module into the file the we are working in?
+require('./moduleName)
+
+#### 4. What do we have to do to make a module available?
+You have to say explicitly what part of a module you need using the module.export statement.
+
 
 #### *Things I want to know more about*
-lorem ipsum
+Time to practice all of these new things!
