Reading notes 12 for 301 ready for canvas submission

--- a/read12_301.md
+++ b/read12_301.md
@@ -1,28 +1,55 @@
 #### *Why This Topic Matters As it Relates to This Module*
-lorem ipsum
+Create Read Update Delete are the basic operations one can perform with an API. As we are currently working with backend features and functions understanding the error codes we may encounter in the endeavor is important and necessary.
 
-### [Topic](weblink)
-#### 
-lorem ipsum
-[WhoSaidIt](weblink)
-![ImageName](weblink)
+### [Status Codes Based On REST Methods](https://www.moesif.com/blog/technical/api-design/Which-HTTP-Status-Code-To-Use-For-Every-CRUD-App/)
+#### 1. n your own words, describe what each group of status code represents:
+100’s = server acknowledgement of client request
+200’s = success - server accepts the client request
+300’s = redirection - requested info isn't available 
+400’s = client error - server has received an invalid request from client
+500’s = server error - server can't be reached (either too busy, derailed by a thrown exception, or otherwise indisposed)
 
-#### 
-lorem ipsum
-[WhoSaidIt](weblink)
-![ImageName](weblink)
+#### 2. What is a status code 202?
+Asynchronous processing - means the request was valid but it hasn't been processed yet.
+
+#### 3. What is a status code 308?
+Permanent redirect - you are not going to get the resource from the server as it is no longer there.
+
+#### 4. What code would you use if an update didn’t return data to a client?
+204
+
+#### 5. What code would you use if a resource used to exist but no longer does?
+308
+
+#### 6. What is the ‘Forbidden’ status code?
+403
 
 
-### [Topic](weblink)
-#### 
-lorem ipsum
-[WhoSaidIt](weblink)
-![ImageName](weblink)
+### [Build A REST API With Node.js, Express, & MongoDB - Quick ](https://www.youtube.com/channel/UCFbNIlppjAuEX4znoulh0Cw)
+_ First 20 minutes_
 
-#### 
-lorem ipsum
-[WhoSaidIt](weblink)
-![ImageName](weblink)
+#### 1. Why do we need to pull our MongoDB database string out of our server and put it into our .env?
+
+#### 2. What is middleware?
+"code that runs when the server gets a request but before it gets passed to your routes".
+
+#### 3. What does app.use(express.json()) do?
+"this lets our server accept JSON as a body instead of a post element"
+
+#### 4. What does the /:id mean in a route?
+When creating a route for getting one element you put an ID in the function /:id is used to specify a parameter that can be accessed by typing in request req.params.id which will give access to whatever parameter is passed in after the first slash. _(paraphrased from the video)_
+
+#### 5. What is the difference between PUT and PATCH?
+PUT updates all of the information whereas PATCH allows updating just the data passed in by the user.
+
+#### 6. How do you make a default value in a schema?
+To make a default value in a schema, you can set the value of the key to a static method (aka utility function) such as Date.now(). 
+
+#### 7. What does a 500 error status code mean?
+Error codes in the 500 range indicate that there is an error being caused by the server (not the user or the client).
+
+#### 8. What is the difference between a status 200 and a status 201?
+Status code 200 means that everything was successful while 201 more specificaly means that something (an object) was successfully created. 201 is the accepted standard for use when sending a POST route.
 
 #### *Things I want to know more about*
-lorem ipsum
+I'm looking forward to garnering more practice in utilizing APIs in general.
