Read 13 ready for canvas submission

--- a/read13_301.md
+++ b/read13_301.md
@@ -1,28 +1,28 @@
 #### *Why This Topic Matters As it Relates to This Module*
-lorem ipsum
+The Can-of-Books project is all CRUD-dy.
 
-### [Topic](weblink)
-#### 
-lorem ipsum
-[WhoSaidIt](weblink)
-![ImageName](weblink)
+### [CRUD Basics](https://medium.com/geekculture/crud-operations-explained-2a44096e9c88)
+#### 1. Which HTTP method would you use to update a record through an API?
+POST
 
-#### 
-lorem ipsum
-[WhoSaidIt](weblink)
-![ImageName](weblink)
+#### 2. Which REST methods require an ID parameter?
+UPDATE and DELETE
 
 
-### [Topic](weblink)
-#### 
-lorem ipsum
-[WhoSaidIt](weblink)
-![ImageName](weblink)
+### [Speed Coding: Building a CRUD API ](https://www.youtube.com/watch?v=EzNcBhSv1Wo)
+_(Watch a Twitch streamer code an Express API in 20 minutes!)
 
-#### 
+#### 1. What’s the relationship between REST and CRUD?
+"CRUD functions can exist in a REST API, but REST APIs are not limited to CRUD functions." -[Quoted from logicmonitor.com](https://www.logicmonitor.com/blog/rest-vs-crud#:~:text=In%20its%20base%20form%2C%20CRUD,not%20limited%20to%20CRUD%20functions.)
+
+#### 2. If you had to describe the process of creating a RESTful API in 5 steps, what would they be?
 lorem ipsum
-[WhoSaidIt](weblink)
-![ImageName](weblink)
+1. "The very first step in designing a REST API-based application is – identifying the objects which will be presented as resources."
+2. "decide the resource URIs... URSs are the endpoints for APIs."
+3. "Determine Resource Representations"
+4. Assign the http methods
+5. Address ancillary concerns such as logging, security, and discovery.
+Attribution: Above response directly quoted or paraphrased from [restfulapi.net](https://restfulapi.net/rest-api-design-tutorial-with-example/)
 
 #### *Things I want to know more about*
-lorem ipsum
+Express JS
