--- a/read14_301.md
+++ b/read14_301.md
@@ -1,28 +1,33 @@
 #### *Why This Topic Matters As it Relates to This Module*
 lorem ipsum
 
-### [Topic](weblink)
-#### 
-lorem ipsum
-[WhoSaidIt](weblink)
-![ImageName](weblink)
+### [That Time When Women Stopped Coding](https://www.npr.org/sections/money/2014/10/21/357629765/when-women-stopped-coding)
 
-#### 
+#### 1. What occurred during the same time as the beginning of the decline of women in computer science?
 lorem ipsum
-[WhoSaidIt](weblink)
-![ImageName](weblink)
+
+#### 2. Why does it matter that males had been playing on computers growing up?
+lorem ipsum
 
 
-### [Topic](weblink)
-#### 
-lorem ipsum
-[WhoSaidIt](weblink)
-![ImageName](weblink)
+### [Video: Employee breakdown of key technology companies](https://informationisbeautiful.net/visualizations/diversity-in-tech/)
+### [Video: Why diversity matters to your tech company](https://www.usatoday.com/story/tech/columnist/2015/07/21/why-diversity-matters-your-tech-company/30419871/)
 
-#### 
+#### 1. When are diversity efforts most successful?
+
 lorem ipsum
-[WhoSaidIt](weblink)
-![ImageName](weblink)
+
+#### 2. Why do diverse companies perform better?
+
+lorem ipsum
+
+#### 3. Give an example of how a diverse company can serve a diverse user base or vise-versa.
+lorem ipsum
+
 
 #### *Things I want to know more about*
 lorem ipsum
+
+
+[WhoSaidIt](weblink)
+![ImageName](weblink)
