--- a/read15_301.md
+++ b/read15_301.md
@@ -1,45 +1,62 @@
+ATTRIBUTION: This assignment was a collaborative effort between Martha Quintanilla-Ramirez and Vida Powell
+
 #### *Why This Topic Matters As it Relates to This Module*
-lorem ipsum
+We are currently working and about to embark on more extensive work with APIs and data transmission. Maintaining a standard of data and access security is relevant to both of these endeavors.
 
 ### [What is OAuth](https://www.csoonline.com/article/3216404/what-is-oauth-how-the-open-authorization-framework-works.html)
 
 #### 1. What is OAuth?
-lorem ipsum
+- OAuth is an open-standard authorization protocol or framework that describes how unrelated servers and services can safely allow authenticated access to their assets without actually sharing the initial, related, single logon credential. 
+  - <https://www.csoonline.com/article/3216404/what-is-oauth-how-the-open-authorization-framework-works.html>
 
 #### 2. Give an example of what using OAuth would look like.
-lorem ipsum
+"The simplest example of OAuth is when you go to log onto a website and it offers one or more opportunities to log on using another website’s/service’s logon. You then click on the button linked to the other website, the other website authenticates you, and the website you were originally connecting to logs you on itself afterward using permission gained from the second website." -[Directly quoted from](https://www.csoonline.com/article/3216404/what-is-oauth-how-the-open-authorization-framework-works.html)
 
 #### 3. How does OAuth work? What are the steps that it takes to authenticate the user?
+1. The first website connects to the second website on behalf of the user, using OAuth, providing the user’s verified identity.
+  2. The second site generates a one-time token and a one-time secret unique to the transaction and parties involved.
+  3. The first site gives this token and secret to the initiating user’s client software.
+  4. The client’s software presents the request token and secret to their authorization provider (which may or may not be the second site).
+  5. If not already authenticated to the authorization provider, the client may be asked to authenticate. After authentication, the client is asked to approve the authorization transaction to the second website.
+  6. The user approves (or their software silently approves) a particular transaction type at the first website.
+  7. The user is given an approved access token (notice it’s no longer a request token).
+  8. The user gives the approved access token to the first website.
+  9. The first website gives the access token to the second website as proof of authentication on behalf of the user.
+  10. The second website lets the first website access their site on behalf of the user.
+  11. The user sees a successfully completed transaction occurring.
 
-lorem ipsum
+  12. OAuth is not the first authentication/authorization system to work this way on behalf of the end-user. In fact, many authentication systems, notably Kerberos, work similarly. What is special about OAuth is its ability to work across the web and its wide adoption. It succeeded with adoption rates where previous attempts failed (for various reasons).
+
 
 #### 4. What is OpenID?
-lorem ipsum
+OpenID is a security technology with a focus on authentication. It originally served as a single sign-in vouching for the identities of users but was difficult to implement so it was reinvented in 2014 as an authentication layer for OAuth. -[Paraphrased from](https://www.csoonline.com/article/3216404/what-is-oauth-how-the-open-authorization-framework-works.html)
 
 
 
 ### [Authorization and Authentication flows](https://auth0.com/docs/flows)
 
 #### 1. What is the difference between authorization and authentication?
-lorem ipsum
+"In simple terms, authentication is the process of verifying who a user is, while authorization is the process of verifying what they have access to."[Directly quoted from:](https://auth0.com/docs/get-started/identity-fundamentals/authentication-and-authorization)
 
 #### 2. What is Authorization Code Flow?
-lorem ipsum
+![Auth Code Flow](AuthCodeFlow.jpeg)
 
 #### 3. What is Authorization Code Flow with Proof Key for Code Exchange (PKCE)?
-lorem ipsum
+"The PKCE-enhanced Authorization Code Flow introduces a secret created by the calling application that can be verified by the authorization server; this secret is called the Code Verifier. Additionally, the calling app creates a transform value of the Code Verifier called the Code Challenge and sends this value over HTTPS to retrieve an Authorization Code. This way, a malicious attacker can only intercept the Authorization Code, and they cannot exchange it for a token without the Code Verifier." -[Directly quoted from:](https://auth0.com/docs/get-started/authentication-and-authorization-flow/authorization-code-flow-with-proof-key-for-code-exchange-pkce)
 
 #### 4. What is Implicit Flow with Form Post?
-lorem ipsum
+- "Implicit Flow with Form Post flow uses OIDC to implement web sign-in that is very similar to the way SAML and WS-Federation operates. The web app requests and obtains tokens through the front channel, without the need for secrets or extra backend calls. With this method, you don’t need to obtain, maintain, use, and protect a secret in your application." - [Directly quoted from:]- <https://auth0.com/docs/get-started/authentication-and-authorization-flow/implicit-flow-with-form-post>
+![ImplicitFlowForm](https://files.slack.com/files-pri/T039KG69K-F03JVLW5ZLZ/auth-sequence-implicit-form-post.png)
 
 #### 5. What is Client Credentials Flow?
-lorem ipsum
+Machine-to-Machine apps authenticate and authorize actions and access rights themselves rather than a user doing it. Client Credentials Flow is a process by which the machines pass along their Client ID and Secret to authenticate themselves and get a token. [Paraphrased from:](https://auth0.com/docs/get-started/authentication-and-authorization-flow/client-credentials-flow)
 
 #### 6. What is Device Authorization Flow?
-lorem ipsum
+- "With input-constrained devices that connect to the internet, rather than authenticate the user directly, the device asks the user to go to a link on their computer or smartphone and authorize the device. This avoids a poor user experience for devices that do not have an easy way to enter text. To do this, device apps use the Device Authorization Flow (drafted in OAuth 2.0). For use with mobile/native applications."
+![DeviceFlowAuth](DeviceFlowAuth.png)
 
 #### 7. What is Resource Owner Password Flow?
-lorem ipsum
+Resource Owner Password Flow is the authentication/authorization flow which requests that users provide credentials using an interactive form. This method is NOT recommended as credentials are sent to backend and can be stored for futher use before being exchanged for an Access Token. [Paraphrased from:](https://auth0.com/docs/get-started/authentication-and-authorization-flow/resource-owner-password-flow)
 
 
 #### *Things I want to know more about*
